add_subdirectory(analysis)
add_subdirectory(beam)
add_subdirectory(components)
add_subdirectory(data)
add_subdirectory(detectors)
add_subdirectory(fields)
add_subdirectory(geometry)
add_subdirectory(interfaces)
add_subdirectory(io)
add_subdirectory(limiting)
add_subdirectory(optics)
add_subdirectory(options)
add_subdirectory(processes)
add_subdirectory(sampler)
add_subdirectory(scoring)
add_subdirectory(trajectory)
add_subdirectory(visualisation)
add_subdirectory(dicom)
